# raw2zarr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKER.md  Dockerfile  KVNX-ingestion.py  LICENSE  MANIFEST.in  NOTICE  README.md  README2.md  create_datasets.py  delete.py  docker-compose.yml  environment-ncsa.yml  environment.yml  nexrad_metadata_processor.py  pyproject.toml  setup.py  upload.sh
.github/workflows/: ci.yml
config/: radar.ini  radar.toml
data/: vcp_samples.json
notebooks/: 1.Sigmet2Zarr.ipynb  2.NexRad2Zarr.ipynb  3.RYZHKOV-QVP.ipynb  Poster.ipynb  RHI_plot.ipynb  RYZHKOV-QVP.ipynb  Sigmet2Zarr.ipynb  appending_Zarr.ipynb  dtree_args.ipynb  radar_dtree.ipynb  read_s3_ARCO.ipynb  reading-from-arraylake.ipynb
raw2zarr/: __init__.py  create_dataset.py  data_reader.py  dtree_builder.py  dtree_io.py  main.py  task2zarr.py  template_manager.py  utils.py  zarr_writer.py
raw2zarr/api/: radar_wms_original.py
raw2zarr/builder/: builder_utils.py  convert.py  dtree_builder.py  dtree_radar.py  executor.py  metadata_processor.py  runner.py
raw2zarr/config/: eccc.json  ideam.json  scan_config.json  utils.py  vcp.json  vcp_nexrad.json
raw2zarr/io/: __init__.py  base.py  load.py  preprocess.py
raw2zarr/io/loaders/: __init__.py  iris.py  nexrad.py  odim.py
raw2zarr/templates/: template_manager.py  template_ops.py  template_utils.py  vcp_utils.py
raw2zarr/transform/: alignment.py  dimension.py  encoding.py  georeferencing.py  tranform_utils.py  utils.py
raw2zarr/utils/: __init__.py  core.py  metadata_extractor.py
raw2zarr/writer/: writer_utils.py  zarr_writer.py
results/: Carimagua_files.txt
sigmet2zarr/: __init__.py  __main__.py  convert.py  create_dataset.py  main.py  task2vcp.py  task2zarr.py  utils.py
src/: Untitled.ipynb  plotting.py  read_disk_ARCO.ipynb  read_s3_ARCO.ipynb  task2vcp.py  task2zarr.py  utils.py
test/: __init__.py  conftest.py  tests_dtree_io.py
tests/: __init__.py  conftest.py  test_dtree_io.py  test_utils.py
tests/builder/: conftest.py  test_builder_utils.py  test_convert.py  test_dtree_radar.py  test_metadata_processor.py  test_runner.py
tests/config/: test_config.py  test_vcp_configs.py
tests/io/: test_base.py  test_load.py  test_preprocess.py
tests/templates/: __init__.py  test_template_manager.py  test_template_ops.py  test_template_utils.py  test_vcp_utils.py
tests/transform/: test_aligment.py  test_dimension.py  test_encoding.py  test_georeferencing.py  test_utils.py
tests/writer/: test_writer_utils.py
