[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raw2zarr"
description = "Package for convertir Sigmet radar files into zarr format"
version = "2025.0.0.1"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "serial: marks tests that should run serially (not with xdist)"
]

[tool.setuptools.packages.find]
include = ['raw2zarr']
exclude = ["data", "notebooks"]

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]


[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]
