[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raw2zarr"
description = "Package for convertir Sigmet radar files into zarr format"
version = "0.4.1"
requires-python = ">=3.11"
license = {text = "CC-BY-NC-SA-4.0"}
dependencies = [
    "black>=25.9.0",
    "duckdb>=1.4.0",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "serial: mark a test that must not be run in parallel",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.setuptools.packages.find]
include = ["raw2zarr", "raw2zarr.*"]
exclude = ["data", "notebooks"]

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis", "display", "get_ipython"]
exclude = [
    ".eggs",
    "doc",
]


[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

# Notebook-specific configuration
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",  # Module level import not at top of file (common in notebooks)
    "F821",  # Undefined name (for notebook globals like display)
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
